Update auth middleware
